Add sortHighest function that sorts numbers in an array from highest to lowest.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Deep thinking and problem solving</title>
 </head>
 <body>
-    
+    <h1>Hello Practice with PWJ</h1>
 
 
     <script src="app.js"></script>
