--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Deep thinking and problem solving</title>
 </head>
 <body>
-    <h1>Hello Practice with PWJ</h1>
-
+    <h1 id="helloTxt">Hello Practice with PWJ</h1>
+    <button id="turnBtn">turn blue</button>
 
     <script src="app.js"></script>
 </body>
